--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/nicolassturmel/aes67-web-monitor/issues"
   },
-  "homepage": "https://github.com/nicolassturmel/aes67-web-monitor#readme"
+  "homepage": "https://github.com/nicolassturmel/aes67-web-monitor#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "sdp-transform": "^2.14.0",
+    "url": "^0.11.0",
+    "vhost": "^3.0.2",
+    "ws": "^7.3.1"
+  }
 }
